# SendToflomo

./: .gitignore  README.md  README_en_US.md  UPDATE_LOG.md  index.html  install.json  package.json  vite.config.js
.github/workflows/: release.yml
scripts/: release.mjs  updater.mjs
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  menu.rs
src/assets/css/: element-ui.scss  index.scss
src/components/ByMeACoffee/: index.vue
src/components/Help/: index.vue
src/components/LeftBar/: index.vue
src/components/MemoCard/: index.vue
src/components/RightContent/: index.vue
src/components/RightContentBar/: index.vue
src/components/Setting/: index.vue
src/db/: dexie.js
src/language/: index.js
src/language/lang/: en-US.js  zh-CN.js
src/store/: index.js
src/utils/: checkUpdate.js  exportAllData.js  importData.js  index.js  init.js  parseAppleBooks.js  parseWeread.js  readFile.js  readJSON.js  readSQLite.js  updater.js  utils.js  weread.js  wereadRequest.js
